timelimit (1.5-2) UNRELEASED; urgency=low

  TODO: dpkg-buildflags
  TODO: copyright rev. 135
  TODO: shorten the Vcs-Browser URL

  * Bump Standards-Version to 3.8.4 with no changes.
  * Convert to the 3.0 (quilt) source format with no changes.

 -- Peter Pentchev <roam@ringlet.net>  Sat, 26 Jun 2010 22:00:04 +0300

timelimit (1.5-1) unstable; urgency=low

  * New upstream release
    - add the -p flag to propagate a termination signal.  Closes: #547452
  * Bump Standards-Version to 3.8.3 with no changes.

 -- Peter Pentchev <roam@ringlet.net>  Sat, 31 Oct 2009 17:21:26 +0200

timelimit (1.4-2) unstable; urgency=low

  * Refer to GPL-2, not just GPL, in the copyright file.
  * Bump Standards-Version to 3.8.1 with no changes.
  * Add misc:Depends to the binary package.
  * Minimize the rules file using debhelper override targets.
  * Update the copyright years for the Debian packaging.
  * Point to the actual Debian package files in Vcs-Svn and Vcs-Browser,
    not at the full timelimit upstream repository.

 -- Peter Pentchev <roam@ringlet.net>  Tue, 14 Apr 2009 11:13:21 +0300

timelimit (1.4-1) unstable; urgency=low

  * New upstream version
    - fixes the options processing - does not try to parse the options
      passed to the executed program.  Closes: #505140.

 -- Peter Pentchev <roam@ringlet.net>  Wed, 12 Nov 2008 11:31:03 +0200

timelimit (1.3-1) unstable; urgency=low

  * New upstream version
    - returns the child process exit code instead of always exiting
      with 0.  Closes: #494629.
  * Update debian/copyright since the different source files have
    different copyright years now.
  * Add many more warning options to CFLAGS, just in case.

 -- Peter Pentchev <roam@ringlet.net>  Wed, 03 Sep 2008 16:54:36 +0300

timelimit (1.1-3) unstable; urgency=low

  * Fix the watchfile
  * Remove the $Ringlet VCS tags from the watchfile and the rules file
  * Bump standards version to 3.8.0 (no changes)