@@ -2,7 +2,7 @@ Source: timelimit
 Section: utils
 Priority: optional
 Maintainer: Peter Pentchev <roam@ringlet.net>
-Build-Depends: debhelper (>= 7.0.50)
+Build-Depends: debhelper (>= 7.0.50), dpkg-dev (>= 1.15.7~)
 Standards-Version: 3.8.4
 Vcs-Browser: http://svn.ringlet.net/cgi-bin/viewvc/viewvc.cgi/ringlet/sysutils/timelimit/trunk/timelimit-pkg/debian/
 Vcs-svn: http://svn.ringlet.net/svn/ringlet/sysutils/timelimit/trunk/timelimit-pkg/debian/
